# oauth2

./: .env.example  .gitignore  Cargo.toml  GEMINI.md  README.md
migrations/: 20240311_create_validation_codes.sql  20240312_init_users_and_sessions.sql  init.sql
src/: lib.rs  main.rs
src/application/: auth_app.rs  mod.rs
src/application/command/: mod.rs
src/application/error/: mod.rs
src/context/: mod.rs
src/context/identity/: mod.rs
src/context/identity/application/: auth_app.rs  mod.rs
src/context/identity/application/command/: login.rs  mod.rs  register.rs
src/context/identity/application/error/: app_error.rs
src/context/identity/entity/: mod.rs  session.rs  user.rs  validation_code.rs
src/context/identity/error/: mod.rs
src/context/identity/infrastructure/: code.rs  mod.rs  password_hasher.rs  session.rs  user.rs
src/context/identity/repository/: code.rs  mod.rs  session.rs  user.rs
src/context/identity/service/: auth.rs  code.rs  mod.rs  password_hasher.rs  session.rs  user.rs
src/context/identity/value_object/: email.rs  hashed_password.rs  mod.rs  raw_password.rs  user_id.rs  username.rs  validation_code.rs
src/context/oauth/: mod.rs
src/context/oauth/aggregate/: mod.rs  session.rs
src/context/oauth/application/: exchange_token.rs  mod.rs  start_session.rs
src/context/oauth/entity/: auth.rs  client.rs  mod.rs  token_pair.rs
src/context/oauth/error/: mod.rs
src/context/oauth/repository/: client.rs  mod.rs  session.rs
src/context/oauth/service/: auth_ticket.rs  mod.rs  token.rs
src/context/oauth/value_object/: auth_ticket.rs  authorization_code.rs  client_id.rs  hashed_secret.rs  mod.rs  pkce.rs  raw_secret.rs  redirect_uri.rs  scope.rs  user_id.rs
src/domain/: mod.rs
src/domain/entity/: mod.rs  token.rs  user.rs  validation_code.rs
src/domain/error/: mod.rs
src/domain/repository/: code.rs  user.rs
src/domain/service/: code.rs  mod.rs  password_hasher.rs  token.rs
src/domain/value_object/: email.rs  hashed_password.rs  mod.rs  raw_password.rs  user_id.rs  username.rs  validation_code.rs
src/presentation/: mod.rs
src/presentation/http/: auth.rs  mod.rs
src/presentation/http/middleware/: auth.rs
src/shared/: mod.rs  utils.rs
src/shared/error/: mod.rs
src/shared/infrastructure/: mod.rs  pg.rs  redis.rs
src/shared/infrastructure/email/: mod.rs  qq.rs
