[package]
name = "oauth2"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "1.0.4", features = ["tokio-comp", "aio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4.44", features = ["serde"] }
rand = "0.10.0"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls", "builder", "smtp-transport", "ring", "webpki-roots"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
dotenvy = "0.15"
